--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>personal-finance-dashboard-project</title>
+    <title>vwealty - Your Personal Finance Dashboard</title>
+    <meta name="description" content="Take control of your finances with vwealty's intelligent tracking, budgeting, and investment tools" />
+    <meta name="author" content="vwealty" />
+
+    <meta property="og:title" content="vwealty - Your Personal Finance Dashboard" />
+    <meta property="og:description" content="Take control of your finances with intelligent tracking and budgeting tools" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
